// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Symbols - Bar Bracket 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Symbols - Bar Bracket 2`] = `
Array [
  0.7,
  0,
  0.028,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Symbols - Bar Bracket 3`] = `
Array [
  0.7,
  0,
  0.07467,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;
